first push of main page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  	<link rel="stylesheet" href="./main.css">
+	<title>Page Title</title>
+</head>
+<body>
+
+<h1>Maxjamin</h1>
+<p>This site is dedicated  to documenting my journey in Computer Science</p>
+<hr>
+
+<div class="project" onclick="window.location='./projects/cameraControlApp.html';">
+	<p class="title">Camera Control Application</p>
+	<p class="day">7/15/20</p>
+	<img src="">
+</div>
+
+<div class="project" onclick="window.location='./projects/huffmanencoding.html';">
+	<p class="title">Huffman Coding</p>
+	<p class="day">1/03/20</p>
+	<img src="">
+</div>
+
+</body>
+</html> 
