--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   	<link rel="stylesheet" href="./main.css">
-	<title>Page Title</title>
+	<title>Maxjamin's site</title>
 </head>
 <body>
 
