--- a/projects/cameraControlApp.html
+++ b/projects/cameraControlApp.html
@@ -10,6 +10,8 @@
 <p>This site is dedicated  to documenting my journey in Computer Science</p>
 <hr>
 
+<img class="arduino01" src="../images/arduino01.jpg" alt="ardruino">
+
 <p><a href="https://github.com/maxjamin/sideProject01">https://github.com/maxjamin/sideProject01</a><p>
 
 <p>This project consists of a raspberry pie and a android phone application. The simple phone application authenticates with a server running express node js, then allows the phone user to turn on and record a camera installed on a raspberry pie through bluetooth. The application also allows the user to stop and start at various times and upload their files to a server.
