--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
 <body>
 
 <h1>Maxjamin</h1>
-<p>This site is dedicated  to documenting my journey in Computer Science</p>
 <hr>
+<p>This site is dedicated  to documenting my journey in Computer Science.</p>
+<ul>
+   <li><a href="https://github.com/maxjamin/">Github: https://github.com/maxjamin/</a></li>
+   <li><a href="https://www.linkedin.com/in/bensmith96">Linkin: https://www.linkedin.com/in/bensmith96</a></li>
+</ul>
+
+
+<!--<div class="project" onclick="window.location='./projects/embedded01.html';">
+	<p class="title">Embedded Project 01</p>
+	<p class="day">8/15/20</p>
+	<img src="">
+</div>-->
 
 <div class="project" onclick="window.location='./projects/cameraControlApp.html';">
-	<p class="title">Camera Control Application</p>
+	<p class="title">0x02: Camera Control Application</p>
 	<p class="day">7/15/20</p>
 	<img src="">
 </div>
 
 <div class="project" onclick="window.location='./projects/huffmanencoding.html';">
-	<p class="title">Huffman Coding</p>
+	<p class="title">0x01: Huffman Coding</p>
 	<p class="day">1/03/20</p>
 	<img src="">
 </div>
