--- a/projects/huffmanencoding.html
+++ b/projects/huffmanencoding.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Huffman Coding</h1>
-<p>This site is dedicated  to documenting my journey in Computer Science</p>
+<p>This site is dedicated  to documenting my journey in Computer Science.</p>
 <hr>
 
 <p><a href="https://github.com/maxjamin/huffmanCoding">https://github.com/maxjamin/huffmanCoding</a><p>
