updated project 03 embedded 01

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </ul>
 
 
-<!--<div class="project" onclick="window.location='./projects/embedded01.html';">
-	<p class="title">Embedded Project 01</p>
+<div class="project" onclick="window.location='./projects/embedded01.html';">
+	<p class="title">0x03: Embedded Project 01</p>
 	<p class="day">8/15/20</p>
 	<img src="">
-</div>-->
+</div>
 
 <div class="project" onclick="window.location='./projects/cameraControlApp.html';">
 	<p class="title">0x02: Camera Control Application</p>
