--- a/projects/embedded01.html
+++ b/projects/embedded01.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<h1>Embedded 01</h1>
+<h1>0x03 Embedded 01</h1>
 <p>This site is dedicated  to documenting my journey in Computer Science</p>
 <hr>
 
 <img class="arduino01" src="../images/embedded01.jpg" alt="ATmega128p">
 
-<p>This project is my starting point in understanding Embedded software engineering. For this project I worked with the AVR micro-controller ATmega128p. I used the Pocket AVR Programmer along with AVRdude to upload the program to the microcontroller.<p>
+<p>This project is my starting point in understanding Embedded software engineering. For this project I worked with the AVR micro-controller ATmega128p. I used the Pocket AVR Programmer along with AVRdude to upload the program to the microcontroller. The goal of this project was to create a blinking LED light programmed by the microcontroller<p>
 
 <h2>Items used:</h2>
 <ul>
@@ -22,9 +22,28 @@
 	<li>1x 16 MHz crystal</li>
     <li>1x 10k resistor</li>
     <li>2x 22 picofarad capacitors</li>
+    <li>1x LED</li>
 </ul>
 
 
+<p>Program uploaded: </p>
+<img src="../images/embedded02.png" width="700px" alt="c program uploaded">
+
+<p>Setting all C Ports as outputs and Setting all Outputs to high and low with a second delay</p>
+
+<h3>Final result:</h3>
+<video width="700" height="400" controls>
+  <source src="../images/embedded04.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video> 
+
+<h3>Sources:</h3>
+<ul>
+	<li><a href="http://ww1.microchip.com/downloads/en/DeviceDoc/ATmega48A-PA-88A-PA-168A-PA-328-P-DS-DS40002061A.pdf">http://ww1.microchip.com/downloads/en/DeviceDoc/ATmega48A-PA-88A-PA-168A-PA-328-P-DS-DS40002061A.pdf</li>
+	<li><a href="https://github.com/amirbawab/AVR-cheat-sheet">https://github.com/amirbawab/AVR-cheat-sheet</li>
+	<li><a href="https://maker.pro/custom/tutorial/learn-the-basics-of-io-pins-for-an-avr-microcontroller">https://maker.pro/custom/tutorial/learn-the-basics-of-io-pins-for-an-avr-microcontroller</li>
+</ul>
 
 </body>
 </html> 
