Changed some of the websites css/layout to look cleaner

--- a/index.html
+++ b/index.html
@@ -7,30 +7,39 @@
 <body>
 
 <h1>Maxjamin</h1>
-<hr>
-<p>This site is dedicated  to documenting my journey in Computer Science.</p>
-<ul>
-   <li><a href="https://github.com/maxjamin/">Github: https://github.com/maxjamin/</a></li>
-   <li><a href="https://www.linkedin.com/in/bensmith96">Linkin: https://www.linkedin.com/in/bensmith96</a></li>
-</ul>
 
+<p>This site is dedicated  to documenting my journey in Computer Science and Computer engineering.</p>
+
+<div class="topnav">
+  <a class="active" href="https://maxjamin.github.io/">Home</a>
+  <a href="https://github.com/maxjamin">Github</a>
+  <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
+</div>
+
+<div class="project" onclick="window.location='./projects/embedded02.html';">
+	<img class="homeProjectImages" src="./images/embedded05.jpg">
+	<p class="title">0x03: Embedded Project 02</p>
+	<p class="day">09/02/20</p>
+</div>
 
 <div class="project" onclick="window.location='./projects/embedded01.html';">
+	<img class="homeProjectImages" src="./images/embedded01.jpg">
 	<p class="title">0x03: Embedded Project 01</p>
 	<p class="day">8/15/20</p>
-	<img src="">
 </div>
 
 <div class="project" onclick="window.location='./projects/cameraControlApp.html';">
+	<img class="homeProjectImages" src="./images/arduino01.jpg">
 	<p class="title">0x02: Camera Control Application</p>
 	<p class="day">7/15/20</p>
-	<img src="">
 </div>
 
 <div class="project" onclick="window.location='./projects/huffmanencoding.html';">
+	<img class="homeProjectImages" src="./images/
+	huffman02.png">
 	<p class="title">0x01: Huffman Coding</p>
 	<p class="day">1/03/20</p>
-	<img src="">
+	
 </div>
 
 </body>
