--- a/projects/huffmanencoding.html
+++ b/projects/huffmanencoding.html
@@ -7,8 +7,12 @@
 <body>
 
 <h1>Huffman Coding</h1>
-<p>This site is dedicated  to documenting my journey in Computer Science.</p>
-<hr>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="https://github.com/maxjamin">Github</a>
+  <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
+</div>
 
 <p><a href="https://github.com/maxjamin/huffmanCoding">https://github.com/maxjamin/huffmanCoding</a><p>
 
