--- a/projects/embedded01.html
+++ b/projects/embedded01.html
@@ -7,8 +7,12 @@
 <body>
 
 <h1>0x03 Embedded 01</h1>
-<p>This site is dedicated  to documenting my journey in Computer Science</p>
-<hr>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="https://github.com/maxjamin">Github</a>
+  <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
+</div>
 
 <img class="arduino01" src="../images/embedded01.jpg" alt="ATmega128p">
 
