Changed some of the websites css/layout to look cleaner

--- a/projects/embedded02.html
+++ b/projects/embedded02.html
@@ -16,7 +16,7 @@
 <h1>0x03 Embedded 02</h1>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="maxjamin.github.io">Home</a>
   <a href="https://github.com/maxjamin">Github</a>
   <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
 </div>
