--- a/projects/huffmanencoding.html
+++ b/projects/huffmanencoding.html
@@ -9,7 +9,7 @@
 <h1>Huffman Coding</h1>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="https://maxjamin.github.io/">Home</a>
   <a href="https://github.com/maxjamin">Github</a>
   <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
 </div>
