--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
   <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
 </div>
 
-<div class="project" onclick="window.location='./projects/embedded02.html';">
+<div class="project pageMargin" onclick="window.location='./projects/embedded02.html';">
 	<img class="homeProjectImages" src="./images/embedded05.jpg">
 	<p class="title">0x03: Embedded Project 02</p>
 	<p class="day">09/02/20</p>
 </div>
 
-<div class="project" onclick="window.location='./projects/embedded01.html';">
+<div class="project pageMargin" onclick="window.location='./projects/embedded01.html';">
 	<img class="homeProjectImages" src="./images/embedded01.jpg">
 	<p class="title">0x03: Embedded Project 01</p>
 	<p class="day">8/15/20</p>
 </div>
 
-<div class="project" onclick="window.location='./projects/cameraControlApp.html';">
+<div class="project pageMargin" onclick="window.location='./projects/cameraControlApp.html';">
 	<img class="homeProjectImages" src="./images/arduino01.jpg">
 	<p class="title">0x02: Camera Control Application</p>
 	<p class="day">7/15/20</p>
 </div>
 
-<div class="project" onclick="window.location='./projects/huffmanencoding.html';">
+<div class="project pageMargin" onclick="window.location='./projects/huffmanencoding.html';">
 	<img class="homeProjectImages" src="./images/
 	huffman02.png">
 	<p class="title">0x01: Huffman Coding</p>
