updating git repo

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   	<link rel="stylesheet" href="./main.css">
-	<title>Maxjamin's site</title>
+	<title>Maxjamin</title>
 </head>
 <body>
 
 <h1>Maxjamin</h1>
 
-<p>This site is dedicated  to documenting my journey in Computer Science and Computer engineering.</p>
+<p>This site is dedicated  to documenting my journey in Computer Science and the process of Learning.</p>
 
 <div class="topnav">
   <a class="active" href="https://maxjamin.github.io/">Home</a>
@@ -16,9 +16,15 @@
   <a href="https://www.linkedin.com/in/bensmith96/">Linkin</a>
 </div>
 
+<div class="project pageMargin" onclick="window.location='./projects/compsci02.html';">
+	<img class="homeProjectImages" src="./images/compSci03.png">
+	<p class="title">0x05: Simple Heap</p> 
+	<p class="day">09/16/20</p>
+</div>
+
 <div class="project pageMargin" onclick="window.location='./projects/embedded02.html';">
 	<img class="homeProjectImages" src="./images/embedded05.jpg">
-	<p class="title">0x03: Embedded Project 02</p>
+	<p class="title">0x04: Embedded Project 02</p>
 	<p class="day">09/02/20</p>
 </div>
 
